word-wrap text in key column. fixes https://github.com/WISE-Community/WISE-Translate/issues/19

--- a/common/styles.css
+++ b/common/styles.css
@@ -11,6 +11,6 @@ border:1px solid black;
 }
 
 .cell_key {
-  overflow:hidden;
+  word-wrap:break-word;
   width:200px;
 }
